<resources>
    <string name="app_name">My Application</string>
    <string name="name">Please enter the name.</string>
    <string name="position">Enter the position.</string>
    <string name="salary">Enter the salary.</string>
    <string name="status">Status</string>
    <string name="register">REGISTER</string>
    <string name="title">Employee registration.</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="nextRegister">Register</string>
    <string name="nextReport">Report</string>
    <string name="nextOption">Option</string>
</resources>
